--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ exec-once = nm-applet & blueman-applet
 exec-once = waybar & hyprpaper & hypridle
 exec-once = rclone mount andre-nus: ~/OneDrive
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = swaync
+exec-once = swaync & swayosd-server
 exec-once = [workspace 2 silent] telegram-desktop
 exec-once = [workspace 2 silent] ticktick
 
@@ -272,12 +272,13 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e s 4%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e s 4%-
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness +4
+bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness -4
+bindel = ,Caps_Lock, exec, swayosd-client --caps-lock
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
