Change hyprpaper to swaybg

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,7 +50,8 @@ $menu = wofi
 # exec-once = $terminal
 exec-once = sudo systemctl start bluetooth
 exec-once = nm-applet & blueman-applet
-exec-once = waybar & hyprpaper & hypridle
+exec-once = waybar & hypridle
+exec-once = swaybg --image ~/Pictures/Wallpapers/sea_breeze.png
 exec-once = rclone mount andre-nus: ~/OneDrive
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = swaync & swayosd-server
@@ -214,6 +215,7 @@ bindr = Alt_L, Space, exec, $menu
 bind = $mainMod, N, exec, swaync-client -t -sw
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, S, exec, $screenshot
+bind = $mainMod SHIFT, B, exec, pkill waybar && hyprctl dispatch exec waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
