--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -8,158 +8,73 @@
     // Choose the order of the modules
     "modules-left": [
         "hyprland/workspaces",
-        "tray",
+        "tray"
     ],
     "modules-center": [
 	"clock#time",
 	"custom/notification"
     ],
     "modules-right": [
+	"mpris",
         "network",
-        "mpd",
         "pulseaudio",
         "battery",
         "clock#date",
 	"custom/power"
     ],
-    // Modules configuration
-   //  "sway/workspaces": {
-   //     "disable-scroll": true,
-   //      "all-outputs": true,
-   //      "warp-on-scroll": false,
-   //      "format": "{name}: {icon}",
-   //      "format-icons": {
-   //         "1": "",
-   //          "2": "",
-   //          "3": "",
-   //          "4": "",
-   //          "5": "",
-   //          "urgent": "",
-   //          "focused": "",
-   //          "default": ""
-   //      }
-   //  },
-    "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
-        "format-icons": {
-            "locked": "",
-            "unlocked": ""
-        }
-    },
-    "mpd": {
-        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "unknown-tag": "N/A",
-        "interval": 5,
-        "consume-icons": {
-            "on": " "
-        },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
-        },
-        "repeat-icons": {
-            "on": " "
-        },
-        "single-icons": {
-            "on": "1 "
-        },
-        "state-icons": {
-            "paused": "",
-            "playing": ""
-        },
-        "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
-    },
-    "idle_inhibitor": {
-        "format": " {icon}",
-        "format-icons": {
-            "activated": " ",
-            "deactivated": " "
-        }
+
+    // Left modules
+    "hyprland/window": {
+	"format": "{title}",
+	"max-length": 30,
+    	"rewrite": {
+		".*Microsoft Edge$": "Edge"
+	}	
     },
     "tray": {
-        // "icon-size": 21,
         "spacing": 10
     },
+
+    // Center modules
     "clock#time": {
-    	"format": " {:%H:%M}",
+    	"format": " {:%H:%M}"
     },
-    "clock#date": {
-        "format": " {:%a,%D}",
-        "tooltip-format": "<tt><big>{calendar}</big></tt>",
-        "calendar": {
-                "mode"          : "month",
-                "mode-mon-col"  : 3,
-                "weeks-pos"     : "right",
-                "on-scroll"     : 1,
-                "format": {
-                      "months":     "<span color='#ffead3'><b>{}</b></span>",
-                      "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-                      "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-                      "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-                      "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
-                }
-                    },
-        "actions":  {
-            "on-click-right": "mode",
-            "on-scroll-up": "tz_up",
-            "on-scroll-down": "tz_down",
-            "on-scroll-up": "shift_up",
-            "on-scroll-down": "shift_down"
-        }
+    "custom/notification": {
+   	"tooltip": false,
+    	"format": "{} {icon}",
+    	"format-icons": {
+      		"notification": "<span foreground='#ff3b30'><b></b></span>",
+      		"none": "",
+      		"dnd-notification": "<span foreground='red'><sup></sup></span>",
+      		"dnd-none": "",
+      		"inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      		"inhibited-none": "",
+      		"dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      		"dnd-inhibited-none": ""
+    	},
+    	"return-type": "json",
+    	"exec-if": "which swaync-client",
+    	"exec": "swaync-client -swb",
+    	"on-click": "swaync-client -t -sw",
+    	"on-click-right": "swaync-client -d -sw",
+    	"escape": true
     },
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
-    },
-    "memory": {
-        "format": "{}% "
-    },
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
-    },
-    "backlight": {
-        // "device": "acpi_video1",
-        "format": "{percent}% {icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
-    },
-    "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{icon} <small>{capacity}%</small>",
-        "format-full": "{icon} ",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon} ",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "battery#bat2": {
-        "bat": "BAT2"
-    },
-    "power-profiles-daemon": {
-      "format": "{icon}",
-      "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
-      "tooltip": true,
-      "format-icons": {
-        "default": "",
-        "performance": "",
-        "balanced": "",
-        "power-saver": ""
-      }
+
+    // Right modules
+    "mpris": {
+	"format-playing": "{player_icon} {title} <small>[{position}/{length}]</small>",
+	"format-paused": "{status_icon} {title} <small>[{position}/{length}]</small>",
+	"format-stopped": "",
+	"title-len": 20,
+	"player-icons": {
+		"default": "▶",
+		"mpv": "🎵"
+	},
+	"status-icons": {
+		"paused": ""
+	},
+	"interval": 1,
+        "tooltip-format": "Title: {title}\nArtist: {artist}\nAlbum: {album}"
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
@@ -190,17 +105,43 @@
         },
         "on-click": "pavucontrol"
     },
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
+    "battery": {
+        "states": {
+            // "good": 95,
+            "warning": 30,
+            "critical": 15
         },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+        "format": "{icon} <small>{capacity}%</small>",
+        "format-full": "{icon} ",
+        "format-charging": "{capacity}% ",
+        "format-plugged": "{capacity}% ",
+        "format-alt": "{time} {icon} ",
+        // "format-good": "", // An empty format will hide the module
+        "format-icons": ["", "", "", "", ""]
+    },
+    "clock#date": {
+        "format": " {:%a,%d/%m/%y}",
+        "tooltip-format": "<tt><big>{calendar}</big></tt>",
+        "calendar": {
+                "mode"          : "month",
+                "mode-mon-col"  : 3,
+                "weeks-pos"     : "right",
+                "on-scroll"     : 1,
+                "format": {
+                      "months":     "<span color='#ffead3'><b>{}</b></span>",
+                      "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+                      "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+                      "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+                      "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                }
+                    },
+        "actions":  {
+            "on-click-right": "mode",
+            "on-scroll-up": "tz_up",
+            "on-scroll-down": "tz_down",
+            "on-scroll-up": "shift_up",
+            "on-scroll-down": "shift_down"
+        }
     },
     "custom/power": {
         "format" : " ⏻ ",
@@ -215,31 +156,55 @@
 	},
 	"on-click-right": "hyprlock"
     },
-    "hyprland/window": {
-	"format": "{title}",
-	"max-length": 30,
-    	"rewrite": {
-		".*Microsoft Edge$": "Edge"
-	}	
+
+
+    "mpd": {
+        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
+        "format-disconnected": "Disconnected ",
+        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+        "unknown-tag": "N/A",
+        "interval": 5,
+        "consume-icons": {
+            "on": " "
+        },
+        "random-icons": {
+            "off": "<span color=\"#f53c3c\"></span> ",
+            "on": " "
+        },
+        "repeat-icons": {
+            "on": " "
+        },
+        "single-icons": {
+            "on": "1 "
+        },
+        "state-icons": {
+            "paused": "",
+            "playing": ""
+        },
+        "tooltip-format": "MPD (connected)",
+        "tooltip-format-disconnected": "MPD (disconnected)"
     },
-    "custom/notification": {
-   	"tooltip": false,
-    	"format": "{} {icon}",
-    	"format-icons": {
-      		"notification": "<span foreground='#ff3b30'><b></b></span>",
-      		"none": "",
-      		"dnd-notification": "<span foreground='red'><sup></sup></span>",
-      		"dnd-none": "",
-      		"inhibited-notification": "<span foreground='red'><sup></sup></span>",
-      		"inhibited-none": "",
-      		"dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
-      		"dnd-inhibited-none": ""
-    	},
-    	"return-type": "json",
-    	"exec-if": "which swaync-client",
-    	"exec": "swaync-client -swb",
-    	"on-click": "swaync-client -t -sw",
-    	"on-click-right": "swaync-client -d -sw",
-    	"escape": true
-    }
+    "power-profiles-daemon": {
+      "format": "{icon}",
+      "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+      "tooltip": true,
+      "format-icons": {
+        "default": "",
+        "performance": "",
+        "balanced": "",
+        "power-saver": ""
+      }
+    },
+    "custom/media": {
+        "format": "{icon} {}",
+        "return-type": "json",
+        "max-length": 40,
+        "format-icons": {
+            "spotify": "",
+            "default": "🎜"
+        },
+        "escape": true,
+        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
+        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+    }    
 }
