--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -216,6 +216,7 @@ bind = $mainMod, N, exec, swaync-client -t -sw
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, S, exec, $screenshot
 bind = $mainMod SHIFT, B, exec, pkill waybar && hyprctl dispatch exec waybar
+bind = , XF86Calculator, exec, gnome-calculator
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -299,9 +300,12 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float, ^(kitty)$
 
 # Example windowrule v2
+# 1. Open the app
+# 2. `hyprctl clients` to view class
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 windowrulev2 = float, class: org.pulseaudio.pavucontrol
 windowrulev2 = float, class: nm-connection-editor
+windowrulev2 = float, class: org.gnome.Calculator
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
