Waybar: Update network icons

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -78,13 +78,14 @@
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": " ",
+        "format-wifi": "{icon}",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{essid} ({signalStrength}%)",
         "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "<span foreground='red'>⚠ Wifi</span>",
+        "format-disconnected": "<span foreground='red'>󰤮 </span>",
 	"on-click": "nm-connection-editor",
-	"format-icons": ["", "", ""]
+	"format-icons": ["󰤯 ", "󰤟 ", "󰤢 ", "󰤥 ", "󰤨 "],
+	"interval": 5
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
