--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -69,8 +69,7 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,KDE
 env = QT_STYLE_OVERRIDE,Breeze
-env = HYPRSHOT_DIR,~/Pictures/Screenshots/
-env = XDG_MENU_PREFIX=arch-
+env = HYPRSHOT_DIR, $HOME/Pictures/Screenshots
 
 
 #####################
@@ -106,11 +105,6 @@ decoration {
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
-
-    drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
