--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,6 +49,7 @@ $menu = wofi
 
 # exec-once = $terminal
 exec-once = sudo systemctl start bluetooth
+exec-once = sudo logid -c ~/.config/logid/logid.cfg
 exec-once = nm-applet & blueman-applet
 exec-once = waybar & hypridle
 exec-once = swaybg --image ~/Pictures/Wallpapers/sea_breeze.png
@@ -57,6 +58,8 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = swaync & swayosd-server
 exec-once = [workspace 2 silent] telegram-desktop
 exec-once = [workspace 2 silent] ticktick
+exec-once = [wordspace special silent] firefox
+exec-once = fcitx
 
 
 #############################
@@ -194,6 +197,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $lock = hyprlock
 $screenshot = hyprshot -m region
+$browser = microsoft-edge-stable
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
@@ -211,6 +215,7 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, S, exec, $screenshot
 bind = $mainMod SHIFT, B, exec, pkill waybar && hyprctl dispatch exec waybar
 bind = , XF86Calculator, exec, gnome-calculator
+bind = $mainMod SHIFT, N, exec, $browser --inprivate
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
